# al-iyaal-kids

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  biome.json  components.json  handoff.md  index.html  package.json  release.config.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/: logo.psd
docs/: macos-signing-notarization.md
python-worker/: README.md  pyproject.toml  requirements.lock.txt  worker.py
python-worker/scripts/: check.sh
python-worker/src/al_iyaal_worker/: __init__.py  commands.py  errors.py  filesystem.py  models.py  processor.py  protocol.py  runtime.py  subtitles.py  timecode.py  worker_daemon.py
python-worker/src/al_iyaal_worker/moderation/: __init__.py  engine.py  llm.py
python-worker/src/al_iyaal_worker/tasks/: __init__.py  cut.py  events.py  flag.py  remove_music.py  transcribe.py
python-worker/tests/: test_commands.py  test_cut.py  test_errors.py  test_filesystem.py  test_flag.py  test_llm_analysis.py  test_transcribe.py
python-worker/tests/fixtures/: sample.srt
scripts/: bootstrap.sh  check.sh  fetch-ffmpeg.sh  release-macos.sh  setup-notary.sh  sign-notarize-macos.sh  sync-icons.ts  sync-version.ts  sync-yap.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  commands.rs  file_discovery.rs  ids.rs  lib.rs  protocol.rs  runtime.rs  state.rs  types.rs  worker.rs
src/components/: analytics-panel.tsx  dashboard-panel.tsx  log-output.tsx  placeholder-panel.tsx  (+7 more)
(+59 files in other folders)
