[package]
name = "tauri-app"
version = "1.1.0"
description = "al-iyaal kids media studio"
authors = ["rhaq"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4", "serde"] }





